force-app/main/default/objects/Project__c/fields/CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CompletionDate__c</fullName>
    <description>When it is expected to complete the project</description>
    <inlineHelpText>When it is expected to complete the project</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>