force-app/main/default/objects/Project__c/fields/EndUserId__c.field-meta.xml
<CustomField>
    <fullName>EndUserId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Company - Owner of the Project</description>
    <inlineHelpText>Company - Owner of the Project</inlineHelpText>
    <label>End User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (as end user)</relationshipLabel>
    <relationshipName>Projects_End_User</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>