force-app/main/default/objects/Project__c/fields/EPCId__c.field-meta.xml
<CustomField>
    <fullName>EPCId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Engineering, procurement, construction and commissioning company</description>
    <inlineHelpText>Engineering, procurement, construction and commissioning company</inlineHelpText>
    <label>EPC</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (EPC)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>