force-app/main/default/objects/Project__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <inlineHelpText>Description of the project facility</inlineHelpText>
    <label>Facility</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>