force-app/main/default/objects/Project__c/fields/LaunchDate__c.field-meta.xml
<CustomField>
    <fullName>LaunchDate__c</fullName>
    <description>Launch date of the project</description>
    <inlineHelpText>When the project was launched by its owner</inlineHelpText>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>