force-app/main/default/objects/Project__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>Link to the project website or any website with information about the project.</description>
    <inlineHelpText>Please add link to the project website or any website with information about the project.</inlineHelpText>
    <label>Link</label>
    <type>Url</type>
</CustomField>