force-app/main/default/objects/Project__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <description>Phase of the project</description>
    <inlineHelpText>Phase of the project</inlineHelpText>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Announced</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Awarded</fullName>
                <isActive>false</isActive>
                <label>Awarded</label>
            </value>
            <value>
                <fullName>Bid Evaluation</fullName>
                <isActive>false</isActive>
                <label>Bid Evaluation</label>
            </value>
            <value>
                <fullName>Bid submission</fullName>
                <isActive>false</isActive>
                <label>Bid submission</label>
            </value>
            <value>
                <fullName>Commissioning</fullName>
                <isActive>false</isActive>
                <label>Commissioning</label>
            </value>
            <value>
                <fullName>Prequalification</fullName>
                <isActive>false</isActive>
                <label>Prequalification</label>
            </value>
            <value>
                <fullName>Tendering &amp; bidding</fullName>
                <isActive>false</isActive>
                <label>Tendering &amp; bidding</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>