force-app/main/default/objects/Project__c/fields/ProcurementShare__c.field-meta.xml
<CustomField>
    <fullName>ProcurementShare__c</fullName>
    <description>The share of Interpipe products in Project requirements</description>
    <label>Interpipe Procurement Share %</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>