force-app/main/default/objects/Project__c/fields/Quantity_t__c.field-meta.xml
<CustomField>
    <fullName>Quantity_t__c</fullName>
    <description>Total quantity of the project in Mt</description>
    <inlineHelpText>Please input total required quantity for the project in Mt</inlineHelpText>
    <label>Total Q-ty of Project (Mt)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>