force-app/main/default/objects/Project__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <inlineHelpText>Where are we now in our deal for the project</inlineHelpText>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
                <default>true</default>
                <label>Planning</label>
            </value>
            <value>
                <fullName>Announced</fullName>
            </value>
            <value>
                <fullName>Tendering &amp; bidding</fullName>
            </value>
            <value>
                <fullName>Prequalification</fullName>
            </value>
            <value>
                <fullName>Bid submission</fullName>
            </value>
            <value>
                <fullName>Bid Evaluation</fullName>
            </value>
            <value>
                <fullName>Awarded</fullName>
            </value>
            <value>
                <fullName>Commissioning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>