force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EndUserId__c</columns>
    <columns>Industry__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>AdditionalInformation__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>ContactId__c</columns>
    <columns>Phase__c</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>